Fixed links in accordion that would inline on high zooms/small devices, inset accordion tabs, spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,7 @@
 /****** PLACE YOUR CUSTOM STYLES HERE ******/
 
 .menu > li > ul li a {
-	margin-left: 6px;
+  margin-left: 6px;
 }
 
 .menu > li ul {
@@ -9,3 +9,15 @@
   width: auto;
 }
 
+.accordion-1 .title {
+  padding-left: 32px;
+}
+
+.accordion-1 .text-center p a {
+  display: block;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  text-align: center;
+}
